--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT =3001;
+PORT =3001
 MONGODB_URL = mongodb+srv://skumar41d:Z7ilMGa3yMS0p1ec@cluster0.lhavs.mongodb.net/
+MONGODB_URL_LOCAL = mongodb://localhost:27017/mydatabase
