--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT =3001
 MONGODB_URL = mongodb+srv://skumar41d:Z7ilMGa3yMS0p1ec@cluster0.lhavs.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_URL_LOCAL = mongodb://localhost:27017/test
+JWT_SECRET = 1234
